--- a/grocerylists.html
+++ b/grocerylists.html
@@ -5,8 +5,11 @@
 <body>
 <link rel="icon" href="favicon.ico">
 <h1>Grocery Lists</h1>  
-<h2>Welcome </h2>
-<p style='cursor:text; background-color: #DCD6CD; color: #545454'>"Section" creates a new section from your text in the text box. "Add" creates a new item in your list. You can have infinite items in a list. Click an item to check it. Type a number or use the &#x2193;/&#x2191; buttons to change quantity. Click and drag an item or section to sort.</p>
+<p style="cursor: text; background-color: #DCD6CD;"></p>
+<p style="cursor: text; background-color: #DCD6CD;"></p>
+<a style='cursor:text; background-color: #DCD6CD; color: #545454'>"Section" creates a new section from your text in the text box. "Add" creates a new item in your list. You can have infinite items in a list. Click an item to check it. Type a number or use the &#x2193;/&#x2191; buttons to change quantity. Click and drag an item or section to sort. When in delete mode, click an item to delete it.</a>
+<p style="cursor: text; background-color: #DCD6CD;"></p>
+<p style="cursor: text; background-color: #DCD6CD;"></p>
 <a>Click an item to check it.</a>
 <p style="cursor: text; background-color: #DCD6CD;"></p>
 <p style="cursor: text; background-color: #DCD6CD;"></p>
