--- a/grocerylists.html
+++ b/grocerylists.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <script src="scripts/jquery.ui.touch-punch.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </head>
   <body>
     <h1>Grocery Lists</h1>  
@@ -26,12 +29,10 @@
     <input type="button" id="add" value="Add">
     <input type="button" id="section" value="Section">
     <form>
-    <ul id='list'>
-    <p>All</p>
-    </ul>
+      <ul id='list'>
+        <p>All</p>
+      </ul>
     </form>
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
