--- a/grocerylists.html
+++ b/grocerylists.html
@@ -10,6 +10,7 @@
     <script src="scripts/jquery.ui.touch-punch.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
   </head>
   <body>
     <h1>Grocery Lists</h1>  
